--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/BaiduTraceSDK_v2_1_15.jar')
     compile files('libs/BaiduLBS_Android.jar')
+    compile files('libs/gson-2.2.1.jar')
+    compile files('libs/android-support-v4.jar')
 }
