--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,10 @@
             android:enabled="true"
             android:exported="true" >
         </service>
+        <service
+            android:name=".service.MonitorService"
+            android:enabled="true"
+            android:exported="true"/>
     </application>
 
 </manifest>
